update refine docs chain

--- a/docs/docs/versions/migrating_chains/index.mdx
+++ b/docs/docs/versions/migrating_chains/index.mdx
@@ -30,6 +30,8 @@ The below pages assist with migration from various specific chains to LCEL:
 - [ConversationChain](/docs/versions/migrating_chains/conversation_chain)
 - [RetrievalQA](/docs/versions/migrating_chains/retrieval_qa)
 - [ConversationalRetrievalChain](/docs/versions/migrating_chains/conversation_retrieval_chain)
+- [MapReduceDocumentsChain](/docs/versions/migrating_chains/map_reduce_chain)
+- [RefineDocumentsChain](/docs/versions/migrating_chains/refine_docs_chain)
 - [LLMRouterChain](/docs/versions/migrating_chains/llm_router_chain)
 - [MultiPromptChain](/docs/versions/migrating_chains/multi_prompt_chain)
 
