--- a/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
@@ -7,43 +7,48 @@
    "source": [
     "---\n",
     "title: Migrating from RefineDocumentsChain\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a04462cb-a1d1-49ac-9626-36a2882e56d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb0d1724-49f0-4931-a013-68c8f9e5492b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install --upgrade --quiet langchain-openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5e65e81-8735-4900-a275-c8979ec70821",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from getpass import getpass\n",
+    "---\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = getpass()"
+    "[RefineDocumentsChain](https://api.python.langchain.com/en/latest/chains/langchain.chains.combine_documents.refine.RefineDocumentsChain.html) implements a strategy for analyzing long texts. The strategy is as follows:\n",
+    "\n",
+    "- Split a text into smaller documents;\n",
+    "- Apply a process to the first document;\n",
+    "- Refine or update the result based on the next document;\n",
+    "- Repeat through the sequence of documents until finished.\n",
+    "\n",
+    "A common process applied in this context is summarization, in which a running summary is modified as we proceed through chunks of a long text. This is particularly useful for texts that are large compared to the context window of a given LLM.\n",
+    "\n",
+    "An [LCEL](/docs/concepts/#langchain-expression-language-lcel) implementation confers a number of advantages for this problem, including support for token-by-token streaming. Because it is assembled from modular components, it is also simple to extend or modify (e.g., to incorporate [tool calling](/docs/concepts/#functiontool-calling) or other behavior).\n",
+    "\n",
+    "Below we will go through both `RefineDocumentsChain` and a corresponding LCEL implementation on a simple example for illustrative purposes.\n",
+    "\n",
+    "Let's first load a chat model:\n",
+    "\n",
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "34fc8315-4354-4d4e-952a-c0465d93b23c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "0a456eab-6f51-498b-9f0a-3c05cb0793cb",
    "metadata": {},
    "outputs": [],
@@ -54,16 +59,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e155f7a-3035-4172-a5c7-85d47cbd6cc8",
+   "cell_type": "markdown",
+   "id": "9950d6e1-7ca0-4b46-8622-813b3c30b85d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Example\n",
+    "\n",
+    "Let's go through an example where we summarize a sequence of documents. We first generate some simple documents for illustrative purposes:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "abb1abb0-0c5e-4179-8431-c2b2d52bd57b",
    "metadata": {},
    "outputs": [],
@@ -78,12 +85,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edef00d1-9d33-4294-a909-704d38536f0b",
+   "cell_type": "markdown",
+   "id": "ffd939c9-1717-4afd-a615-4a1d560ca814",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Legacy\n",
+    "\n",
+    "Below we show an implementation with `RefineDocumentsChain`. We define the prompt templates for the initial summarization and successive refinements, instantiate separate [LLMChain](https://api.python.langchain.com/en/latest/chains/langchain.chains.llm.LLMChain.html) objects for these two purposes, and instantiate `RefineDocumentsChain` with these components."
+   ]
   },
   {
    "cell_type": "code",
@@ -140,6 +149,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "06ee50d8-5f37-4bcd-9181-5280b54b1b44",
+   "metadata": {},
+   "source": [
+    "We can now invoke our chain:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "8686f56f-992f-4556-a74c-8d3903d0db38",
@@ -148,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "'Apples are typically red in color, blueberries are blue, and bananas are yellow.'"
+       "'Apples are red, blueberries are blue, and bananas are yellow in color.'"
       ]
      },
      "execution_count": 6,
@@ -162,12 +179,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1484e509-4932-4979-809c-29aa6a5d364e",
+   "cell_type": "markdown",
+   "id": "22d5f5d2-b7f3-431c-bb25-fa1b4d353663",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The [LangSmith trace](https://smith.langchain.com/public/8ec51479-9420-412f-bb21-cb8c9f59dfde/r) is composed of three LLM calls: one for the initial summary, and two more updates of that summary. The process completes when we update the summary with content from the final document."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f5caba4-f363-4bcf-8dd4-1d015e27a18d",
+   "metadata": {},
+   "source": [
+    "### LCEL\n",
+    "\n",
+    "Below we show an LCEL implementation of this process:\n",
+    "\n",
+    "- We use the same two templates as before.\n",
+    "- We generate a simple chain for the initial summary that plucks out the first document, formats it into a prompt and runs inference with our LLM.\n",
+    "- We generate a second `_refine_remaining_docs` chain that generates a sequence of simple `prompt | llm | StrOutputParser()` chains, formatting the context from each remaining document into the prompt."
+   ]
   },
   {
    "cell_type": "code",
@@ -244,18 +275,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca52e64b-5828-4220-96ac-4dc01668b5ec",
+   "metadata": {},
+   "source": [
+    "We can invoke the chain as before:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c1aea299-c62e-4e36-a3e5-9ed866169f39",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Apples are a red fruit, blueberries are blue, and bananas are yellow.'"
+       "'Apples are typically red in color, blueberries are blue, and bananas are yellow.'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,28 +304,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccf61d71-c200-4c2b-89c4-9eb62a9e6a68",
+   "cell_type": "markdown",
+   "id": "cb390e43-58db-43af-9118-aed6f08ce351",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In the [LangSmith trace](https://smith.langchain.com/public/6b038c7a-c56b-4ae2-9d82-686020146c43/r) we again recover three LLM calls, performing the same functions as before.\n",
+    "\n",
+    "Note that the LCEL implementation allows us to stream output tokens, if desired:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28b9909f-94db-499d-aaa6-d423d54abcba",
+   "execution_count": 10,
+   "id": "20be31b7-7981-408e-9962-b525bfc89623",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " | App | les |  are |  a |  red |  fruit | , |  blue | berries |  are |  blue | , |  and |  bananas |  are |  yellow | . |  | "
+     ]
+    }
+   ],
+   "source": [
+    "for chunk in chain.stream(documents):\n",
+    "    print(chunk, end=\" | \")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7300843c-abe4-4d95-ac55-2d76fd83e422",
+   "cell_type": "markdown",
+   "id": "5ad2a8f1-e453-4f0b-8911-8c8ddf607f64",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Next steps\n",
+    "\n",
+    "Check out the [LCEL conceptual docs](/docs/concepts/#langchain-expression-language-lcel) for more background information.\n",
+    "\n",
+    "See [this tutorial](/docs/tutorials/summarization/) for more LLM-based summarization strategies."
+   ]
   },
   {
    "cell_type": "code",
