remove LCEL in map reduce doc to simplify

--- a/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b221a71f-982b-4c08-8597-96c890e00965",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "84ee3851-b4a9-4fbe-a78f-d05168715b91",
    "metadata": {},
    "outputs": [],
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "b2a79a01-2fcd-465e-b85f-bf0fcc05e4a6",
+   "execution_count": 5,
+   "id": "4f57ed52-08a5-49f6-ab19-1be51a853a2f",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2c710a66-2d3d-44be-b9e7-9dfee8c22a50",
    "metadata": {},
    "outputs": [],
@@ -223,6 +223,9 @@
     "\n",
     "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)\n",
     "\n",
+    "map_chain = map_prompt | llm | StrOutputParser()\n",
+    "reduce_chain = reduce_prompt | llm | StrOutputParser()\n",
+    "\n",
     "# Graph components: define the components that will make up the graph\n",
     "\n",
     "\n",
@@ -246,17 +249,9 @@
     "\n",
     "\n",
     "# Here we generate a summary, given a document\n",
-    "def generate_summary(state: SummaryState):\n",
-    "    def _format_output(response: str) -> dict:\n",
-    "        return {\"summaries\": [response]}\n",
-    "\n",
-    "    return (\n",
-    "        operator.itemgetter(\"content\")\n",
-    "        | map_prompt\n",
-    "        | llm\n",
-    "        | StrOutputParser()\n",
-    "        | _format_output\n",
-    "    )\n",
+    "async def generate_summary(state: SummaryState):\n",
+    "    response = await map_chain.ainvoke(state[\"content\"])\n",
+    "    return {\"summaries\": [response]}\n",
     "\n",
     "\n",
     "# Here we define the logic to map out over the documents\n",
@@ -271,17 +266,9 @@
     "\n",
     "\n",
     "# Here we will generate the final summary\n",
-    "def generate_final_summary(state: OverallState):\n",
-    "    def _format_output(response: str) -> dict:\n",
-    "        return {\"final_summary\": response}\n",
-    "\n",
-    "    return (\n",
-    "        operator.itemgetter(\"summaries\")\n",
-    "        | reduce_prompt\n",
-    "        | llm\n",
-    "        | StrOutputParser()\n",
-    "        | _format_output\n",
-    "    )\n",
+    "async def generate_final_summary(state: OverallState):\n",
+    "    response = await reduce_chain.ainvoke(state[\"summaries\"])\n",
+    "    return {\"final_summary\": response}\n",
     "\n",
     "\n",
     "# Construct the graph: here we put everything together to construct our graph\n",
@@ -296,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "934cf1a5-ce6d-48ac-8151-942d14586052",
    "metadata": {},
    "outputs": [
@@ -307,7 +294,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,17 +315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e4b999d5-07f5-45c6-8cb0-c77440790cd3",
+   "execution_count": 8,
+   "id": "7b1994f4-5a7a-4dda-bc0c-b9548cc8242f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'generate_summary': {'summaries': ['Apples are typically red in color.']}}\n",
       "{'generate_summary': {'summaries': ['Bananas are yellow in color.']}}\n",
       "{'generate_summary': {'summaries': ['Blueberries are a type of fruit that are blue in color.']}}\n",
-      "{'generate_summary': {'summaries': ['Apples are typically red in color.']}}\n",
       "{'generate_final_summary': {'final_summary': 'The main themes are the colors of different fruits: apples are red, blueberries are blue, and bananas are yellow.'}}\n"
      ]
     }
@@ -379,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "dfbb6ce8-9183-41d4-b022-924ee01669e0",
    "metadata": {},
    "outputs": [
@@ -387,6 +374,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
       "Created a chunk of size 1003, which is longer than the specified 1000\n"
      ]
     },
@@ -472,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "a1cb9fcf-3a27-45e0-84bc-83c66aa65421",
    "metadata": {},
    "outputs": [],
@@ -481,10 +469,8 @@
     "\n",
     "from langchain.chains.combine_documents.reduce import (\n",
     "    acollapse_docs,\n",
-    "    collapse_docs,\n",
     "    split_list_of_docs,\n",
     ")\n",
-    "from langchain_core.runnables.base import RunnableEach, RunnableLambda\n",
     "\n",
     "\n",
     "def length_function(documents: List[Document]) -> int:\n",
@@ -510,17 +496,9 @@
     "\n",
     "\n",
     "# Modify final summary to read off collapsed summaries\n",
-    "def generate_final_summary(state: OverallState):\n",
-    "    def _format_output(response: str) -> dict:\n",
-    "        return {\"final_summary\": response}\n",
-    "\n",
-    "    return (\n",
-    "        operator.itemgetter(\"collapsed_summaries\")  # get key from graph state\n",
-    "        | reduce_prompt  # format into prompt\n",
-    "        | llm  # call LLM\n",
-    "        | StrOutputParser()  # coerce to string\n",
-    "        | _format_output  # wrap result in a dict to update the state\n",
-    "    )\n",
+    "async def generate_final_summary(state: OverallState):\n",
+    "    response = await reduce_chain.ainvoke(state[\"collapsed_summaries\"])\n",
+    "    return {\"final_summary\": response}\n",
     "\n",
     "\n",
     "graph = StateGraph(OverallState)\n",
@@ -530,27 +508,15 @@
     "\n",
     "\n",
     "# Add node to collapse summaries\n",
-    "def collapse_summaries(state: OverallState):\n",
-    "    # This is the chain that will perform the summarization\n",
-    "    chain = reduce_prompt | llm | StrOutputParser()\n",
-    "\n",
-    "    def _split_list_of_docs(summaries: list):\n",
-    "        return split_list_of_docs(summaries, length_function, token_max)\n",
-    "\n",
-    "    _collapse_docs = RunnableLambda(\n",
-    "        lambda doc_list: collapse_docs(doc_list, chain.invoke),\n",
-    "        lambda doc_list: acollapse_docs(doc_list, chain.ainvoke),\n",
+    "async def collapse_summaries(state: OverallState):\n",
+    "    doc_lists = split_list_of_docs(\n",
+    "        state[\"collapsed_summaries\"], length_function, token_max\n",
     "    )\n",
+    "    results = []\n",
+    "    for doc_list in doc_lists:\n",
+    "        results.append(await acollapse_docs(doc_list, reduce_chain.ainvoke))\n",
     "\n",
-    "    def _format_output(summaries: list) -> dict:\n",
-    "        return {\"collapsed_summaries\": summaries}\n",
-    "\n",
-    "    return (\n",
-    "        operator.itemgetter(\"collapsed_summaries\")  # get key from graph state\n",
-    "        | RunnableLambda(_split_list_of_docs)  # partition based on token max\n",
-    "        | RunnableEach(bound=_collapse_docs)  # collapse each partition\n",
-    "        | _format_output  # wrap result in a dict to update the state\n",
-    "    )\n",
+    "    return {\"collapsed_summaries\": results}\n",
     "\n",
     "\n",
     "graph.add_node(\"collapse_summaries\", collapse_summaries)\n",
@@ -584,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "4c1704a1-d7e3-43a4-8ea8-7af765253194",
    "metadata": {},
    "outputs": [
@@ -595,7 +561,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,8 +584,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "702be91d-14c1-4a73-8610-72db5e5e7cde",
+   "execution_count": 13,
+   "id": "bf2b5408-580b-4fc6-857d-55ceae94ba23",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +613,7 @@
     }
    ],
    "source": [
-    "for step in app.stream(\n",
+    "async for step in app.astream(\n",
     "    {\"contents\": [doc.page_content for doc in split_docs]},\n",
     "    {\"recursion_limit\": 10},\n",
     "):\n",
