docs: versions sidebar

--- a/docs/docs/versions/release_policy.mdx
+++ b/docs/docs/versions/release_policy.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 2
-sidebar_label: Release Policy
+sidebar_label: Release policy
 ---
 
-# LangChain releases
+# LangChain release policy
 
 The LangChain ecosystem is composed of different component packages (e.g., `langchain-core`, `langchain`, `langchain-community`, `langgraph`, `langserve`, partner packages etc.)
 
