--- a/docs/docs/integrations/tools/exa_search.ipynb
+++ b/docs/docs/integrations/tools/exa_search.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "import os\n",
     "\n",
-    "api_key=os.getenv(\"EXA_API_KEY\") #Set your API key as an environment variable"
+    "api_key = os.getenv(\"EXA_API_KEY\")  # Set your API key as an environment variable"
    ]
   },
   {
@@ -119,23 +119,22 @@
    },
    "outputs": [],
    "source": [
-    "from exa_py import Exa\n",
-    "from langchain_core.tools import tool\n",
     "import os\n",
     "\n",
+    "from exa_py import Exa\n",
+    "from langchain_core.tools import tool\n",
+    "\n",
     "exa = Exa(api_key=os.environ[\"EXA_API_KEY\"])\n",
+    "\n",
     "\n",
     "@tool\n",
     "def search_and_contents(query: str):\n",
     "    \"\"\"Search for webpages based on the query and retrieve their contents.\"\"\"\n",
     "    # This combines two API endpoints: search and contents retrieval\n",
     "    return exa.search_and_contents(\n",
-    "        query,\n",
-    "        use_autoprompt=True,\n",
-    "        num_results=5,\n",
-    "        text=True,\n",
-    "        highlights=True\n",
+    "        query, use_autoprompt=True, num_results=5, text=True, highlights=True\n",
     "    )\n",
+    "\n",
     "\n",
     "@tool\n",
     "def find_similar_and_contents(url: str):\n",
@@ -143,12 +142,8 @@
     "    The url passed in should be a URL returned from `search_and_contents`.\n",
     "    \"\"\"\n",
     "    # This combines two API endpoints: find similar and contents retrieval\n",
-    "    return exa.find_similar_and_contents(\n",
-    "        url,\n",
-    "        num_results=5,\n",
-    "        text=True,\n",
-    "        highlights=True\n",
-    "    )\n",
+    "    return exa.find_similar_and_contents(url, num_results=5, text=True, highlights=True)\n",
+    "\n",
     "\n",
     "tools = [search_and_contents, find_similar_and_contents]"
    ]
@@ -382,11 +377,13 @@
    },
    "outputs": [],
    "source": [
-    "from exa_py import Exa\n",
-    "from langchain_core.tools import tool\n",
     "import os\n",
     "\n",
+    "from exa_py import Exa\n",
+    "from langchain_core.tools import tool\n",
+    "\n",
     "exa = Exa(api_key=os.environ[\"EXA_API_KEY\"])\n",
+    "\n",
     "\n",
     "@tool\n",
     "def search_and_contents(\n",
@@ -396,11 +393,11 @@
     "    start_published_date: str = None,\n",
     "    end_published_date: str = None,\n",
     "    include_text: list[str] = None,\n",
-    "    exclude_text: list[str] = None\n",
+    "    exclude_text: list[str] = None,\n",
     "):\n",
     "    \"\"\"\n",
     "    Search for webpages based on the query and retrieve their contents.\n",
-    "    \n",
+    "\n",
     "    Parameters:\n",
     "    - query (str): The search query.\n",
     "    - include_domains (list[str], optional): Restrict the search to these domains.\n",
@@ -421,20 +418,21 @@
     "        include_text=include_text,\n",
     "        exclude_text=exclude_text,\n",
     "        text=True,\n",
-    "        highlights=True\n",
+    "        highlights=True,\n",
     "    )\n",
+    "\n",
     "\n",
     "@tool\n",
     "def find_similar_and_contents(\n",
     "    url: str,\n",
     "    exclude_source_domain: bool = False,\n",
     "    start_published_date: str = None,\n",
-    "    end_published_date: str = None\n",
+    "    end_published_date: str = None,\n",
     "):\n",
     "    \"\"\"\n",
     "    Search for webpages similar to a given URL and retrieve their contents.\n",
     "    The url passed in should be a URL returned from `search_and_contents`.\n",
-    "    \n",
+    "\n",
     "    Parameters:\n",
     "    - url (str): The URL to find similar pages for.\n",
     "    - exclude_source_domain (bool, optional): If True, exclude pages from the same domain as the source URL.\n",
@@ -448,11 +446,9 @@
     "        start_published_date=start_published_date,\n",
     "        end_published_date=end_published_date,\n",
     "        text=True,\n",
-    "        highlights={\n",
-    "            \"num_sentences\": 1,\n",
-    "            \"highlights_per_url\": 1\n",
-    "        }\n",
+    "        highlights={\"num_sentences\": 1, \"highlights_per_url\": 1},\n",
     "    )\n",
+    "\n",
     "\n",
     "tools = [search_and_contents, find_similar_and_contents]"
    ]
