--- a/docs/docs/integrations/vectorstores/milvus.ipynb
+++ b/docs/docs/integrations/vectorstores/milvus.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## Setup\n",
     "\n",
-    "You'll need to install `langchain-milvus` with `pip install -qU langchain-milvus` to use this integration, we will also download `langchain-ollama` package to use for embeddings.\n"
+    "You'll need to install `langchain-milvus` with `pip install -qU langchain-milvus` to use this integration.\n"
    ]
   },
   {
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install -qU  langchain_milvus langchain-ollama"
+    "%pip install -qU  langchain_milvus"
    ]
   },
   {
