--- a/docs/docs/integrations/vectorstores/mongodb_atlas.ipynb
+++ b/docs/docs/integrations/vectorstores/mongodb_atlas.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "To use MongoDB Atlas, you must first deploy a cluster. We have a Forever-Free tier of clusters available. To get started head over to Atlas here: [quick start](https://www.mongodb.com/docs/atlas/getting-started/).\n",
     "\n",
-    "You'll need to install `langchain-mongodb` and `pymongo` to use this integration, and we will also download `langchain-openai` for this notebook in order to use it for our embeddings."
+    "You'll need to install `langchain-mongodb` and `pymongo` to use this integration."
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install -qU langchain-mongodb pymongo langchain-openai"
+    "pip install -qU langchain-mongodb pymongo"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "source": [
     "### Credentials\n",
     "\n",
-    "For this notebook you will need to set an `OPENAI_API_KEY` and also find your MongoDB cluster URI.\n",
+    "For this notebook you will need to find your MongoDB cluster URI.\n",
     "\n",
     "For information on finding your cluster URI read through [this guide](https://www.mongodb.com/docs/manual/reference/connection-string/)."
    ]
@@ -58,11 +58,8 @@
    "outputs": [],
    "source": [
     "import getpass\n",
-    "import os\n",
     "\n",
-    "MONGODB_ATLAS_CLUSTER_URI = getpass.getpass(\"MongoDB Atlas Cluster URI:\")\n",
-    "if 'OPENAI_API_KEY' not in os.environ:\n",
-    "    os.environ['OPENAI_API_KEY'] = getpass.getpass(\"OpenAI API Key:\")"
+    "MONGODB_ATLAS_CLUSTER_URI = getpass.getpass(\"MongoDB Atlas Cluster URI:\")"
    ]
   },
   {
